# eredin-app

./: .gitignore  LICENSE  README.md  models.dvc  pyproject.toml
.dvc/: config
src/: app.py  config.py
src/database/: db.py  repositories.py
src/services/: image_services.py  model_loader.py
src/services/product_detection/: product_detection_service.py
src/services/shelves_validation/: perspective_service.py  shelves_checks.py  shelves_detection_service.py
src/templates/: index.html
